Replaced Java 8 utility method with one that works in Java 1.6.